# 3d-content-creation..lab7..

./: .gitignore  CMakeLists.txt  FileIntoString.h  FragmentShader.hlsl  Gateware.h  README.md  TextureUtils.h  VertexShader.hlsl  main.cpp  renderer.h
Materials/: Advanced Effects.pptx  FragmentShader_PBR.hlsl  Lab 7 Vulkan.docx  TextureUtilsKTX.h  ~$b 7 Vulkan.docx
Models/WaterBottle/: bottle_blender.gltf
Models/sponza/: sponza_blender_modified.gltf
PBR IBL ENV/: README.txt
TinyGLTF/: stb_image.h  stb_image_write.h  tiny_gltf.h
ktx/: README.txt
ktx/include/: ktxvulkan.h
ktx/lib/: ktx_read_x64_r.lib  objUtil_x64_d.lib  objUtil_x64_r.lib
